--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   "dependencies": {
     "@actions/core": "^1.2.3",
     "@actions/github": "^2.1.1",
+    "fs": "0.0.1-security",
+    "lodash": "^4.17.15",
     "mailgun-js": "^0.22.0",
     "nodemailer": "^6.4.4"
   }
